--- a/blogpost/blogpost1.html
+++ b/blogpost/blogpost1.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>The DM's Spellbook Post</title>
-        <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" href="./blogpost/blogpost.css">  
+         
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/eaa26a6eba.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="blogpost.css"> 
     </head>
     <body>
         <div class="row whole">
@@ -30,7 +30,7 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page">Home</a>
+                        <a class="nav-link active" href="../mainpage/main.html">Home</a>
                       </li>
                       <li class="nav-item conditional">
                         <a class="nav-link active" >Search</a>
@@ -109,7 +109,7 @@
                             <p class="bot-text">
                                 <span class="bottom-links2 conditional2">Newer Post</span>
                                 <span class="bottom-links2 conditional">Newer Post</span>
-                                <a class="mid-text" href="C:\Users\drago\Desktop\Udacity-Blog-project\mainpage\main.html">Home</a>
+                                <a class="mid-text" href="../mainpage/main.html">Home</a>
                                 <a href="#" class="bottom-links1 conditional2" data-toggle="modal" data-target="#oopsModal">Older Post</a>
                                 <a class="bottom-links1 conditional">Older Post</a>
                             </p>
