--- a/pages/blogpost1.html
+++ b/pages/blogpost1.html
@@ -10,7 +10,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/eaa26a6eba.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="blogpost.css"> 
+        <link rel="stylesheet" href="../css/blogpost.css"> 
     </head>
     <body>
         <div class="row whole">
@@ -29,7 +29,7 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" href="../mainpage/main.html">Home</a>
+                        <a class="nav-link active" href="../index.html">Home</a>
                       </li>
                       <li class="nav-item conditional">
                         <a class="nav-link active" >Search</a>
@@ -108,7 +108,7 @@
                             <p class="bot-text">
                                 <span class="bottom-links2 conditional2">Newer Post</span>
                                 <span class="bottom-links2 conditional">Newer Post</span>
-                                <a class="mid-text" href="../mainpage/main.html">Home</a>
+                                <a class="mid-text" href="../index.html">Home</a>
                                 <a href="#" class="bottom-links1 conditional2" data-toggle="modal" data-target="#oopsModal">Older Post</a>
                                 <a class="bottom-links1 conditional">Older Post</a>
                             </p>
